# libelectronpass-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Data Definition.md  Data Definitions.md  README.md  install-cryptopp.sh  install_cryptopp.sh
.travis/: install-sodium-trusty.sh
docs/: Doxyfile  mainpage.dox
examples/: CMakeLists.txt  crypto_example.cpp  passwords_example.cpp  serialization_example.cpp
include/: base64.hpp  crypto.hpp  data.hpp  passgenerator.hpp  passwords.hpp  serialization.hpp  wallet.hpp
include/electronpass/: wallet.hpp
src/: CMakeLists.txt  base64.cpp  crypto.cpp  crypto.hpp  passgenerator.cpp  passwords.cpp  serialization.cpp  wallet.cpp
test/: CMakeLists.txt  base64_test.cpp  crypto_test.cpp  passgenerator_test.cpp  passwords_test.cpp  serialization_test.cpp  wallet_test.cpp
test/googletest/googlemock/: CMakeLists.txt
test/googletest/googletest/: CMakeLists.txt
